Replace raw foreign key value in subdimensions with primary descriptors

--- a/app/views/subdimensions/index.html.erb
+++ b/app/views/subdimensions/index.html.erb
@@ -19,7 +19,7 @@
       <% @subdimensions.each do |subdimension| %>
       <tr>
         <td><%= subdimension.dimension.name %></td>
-        <td><%= subdimension.role_id %></td>
+        <td><%= subdimension.role.name %></td>
         <td><%= subdimension.name %></td>
         <td><%= subdimension.expectation %></td>
         <td>
