Replace raw foreign key value in feedbacks with primary descriptors

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -25,7 +25,7 @@
         <td><%= feedback.staffing.created_at %></td>
         <td><%= feedback.sender_user.name %></td>
         <td><%= feedback.receiver_user.name %></td>
-        <td><%= feedback.subdimension_id %></td>
+        <td><%= feedback.subdimension.name %></td>
         <td><%= feedback.grade %></td>
         <td><%= feedback.comment %></td>
         <td><%= feedback.receiver_visible %></td>
