--- a/app/views/subdimensions/index.html.erb
+++ b/app/views/subdimensions/index.html.erb
@@ -18,7 +18,7 @@
 
       <% @subdimensions.each do |subdimension| %>
       <tr>
-        <td><%= subdimension.dimension_id %></td>
+        <td><%= subdimension.dimension.name %></td>
         <td><%= subdimension.role_id %></td>
         <td><%= subdimension.name %></td>
         <td><%= subdimension.expectation %></td>
