--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -24,7 +24,7 @@
           Staffing
         </label>
 
-        <input type="text" id="staffing_id" name="staffing_id" placeholder="Staffing" class="form-control" value="<%= @feedback.staffing_id %>">
+        <%= select_tag(:staffing_id, options_from_collection_for_select(Staffing.all, :id, :created_at, @feedback.staffing_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for sender_user_id -->
