--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -24,7 +24,7 @@
       <tr>
         <td><%= feedback.staffing.created_at %></td>
         <td><%= feedback.sender_user.name %></td>
-        <td><%= feedback.receiver_user_id %></td>
+        <td><%= feedback.receiver_user.name %></td>
         <td><%= feedback.subdimension_id %></td>
         <td><%= feedback.grade %></td>
         <td><%= feedback.comment %></td>
