Replace raw foreign key value in mentorships with primary descriptors

--- a/app/views/mentorships/index.html.erb
+++ b/app/views/mentorships/index.html.erb
@@ -17,7 +17,7 @@
       <% @mentorships.each do |mentorship| %>
       <tr>
         <td><%= mentorship.mentee.name %></td>
-        <td><%= mentorship.mentor_id %></td>
+        <td><%= mentorship.mentor.name %></td>
         <td>
           <a href="/mentorships/<%= mentorship.id %>" class="btn btn-primary">Show</a>
           <a href="/mentorships/<%= mentorship.id %>/edit" class="btn btn-warning">Edit</a>
