Replace raw foreign key value in staffings with primary descriptors

--- a/app/views/staffings/index.html.erb
+++ b/app/views/staffings/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= staffing.project.name %></td>
         <td><%= staffing.user.name %></td>
-        <td><%= staffing.role_id %></td>
+        <td><%= staffing.role.name %></td>
         <td>
           <a href="/staffings/<%= staffing.id %>" class="btn btn-primary">Show</a>
           <a href="/staffings/<%= staffing.id %>/edit" class="btn btn-warning">Edit</a>
