--- a/app/views/staffings/edit.html.erb
+++ b/app/views/staffings/edit.html.erb
@@ -42,7 +42,7 @@
           Role
         </label>
 
-        <input type="text" id="role_id" name="role_id" placeholder="Role" class="form-control" value="<%= @staffing.role_id %>">
+        <%= select_tag(:role_id, options_from_collection_for_select(Role.all, :id, :name, @staffing.role_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-warning">
