--- a/app/views/staffings/index.html.erb
+++ b/app/views/staffings/index.html.erb
@@ -17,7 +17,7 @@
 
       <% @staffings.each do |staffing| %>
       <tr>
-        <td><%= staffing.project_id %></td>
+        <td><%= staffing.project.name %></td>
         <td><%= staffing.user_id %></td>
         <td><%= staffing.role_id %></td>
         <td>
