Replace foreign key text inputs in mentorships with dropdowns

--- a/app/views/mentorships/new.html.erb
+++ b/app/views/mentorships/new.html.erb
@@ -33,7 +33,7 @@
           Mentor
         </label>
 
-        <input type="text" id="mentor_id" name="mentor_id" placeholder="Mentor" class="form-control" value="<%= @mentorship.mentor_id %>">
+        <%= select_tag(:mentor_id, options_from_collection_for_select(User.all, :id, :name, @mentorship.mentor_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-success">
