--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -23,7 +23,7 @@
       <% @feedbacks.each do |feedback| %>
       <tr>
         <td><%= feedback.staffing.created_at %></td>
-        <td><%= feedback.sender_user_id %></td>
+        <td><%= feedback.sender_user.name %></td>
         <td><%= feedback.receiver_user_id %></td>
         <td><%= feedback.subdimension_id %></td>
         <td><%= feedback.grade %></td>
