--- a/app/views/subdimensions/edit.html.erb
+++ b/app/views/subdimensions/edit.html.erb
@@ -33,7 +33,7 @@
           Role
         </label>
 
-        <input type="text" id="role_id" name="role_id" placeholder="Role" class="form-control" value="<%= @subdimension.role_id %>">
+        <%= select_tag(:role_id, options_from_collection_for_select(Role.all, :id, :name, @subdimension.role_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for name -->
