Only feedback user can modify feedback

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -32,8 +32,11 @@
         <td><%= feedback.mentor_visible %></td>
         <td>
           <a href="/feedbacks/<%= feedback.id %>" class="btn btn-primary">Show</a>
-          <a href="/feedbacks/<%= feedback.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_feedback/<%= feedback.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          
+          <% if current_user == feedback.sender_user %>
+            <a href="/feedbacks/<%= feedback.id %>/edit" class="btn btn-warning">Edit</a>
+            <a href="/delete_feedback/<%= feedback.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <% end %>
         </td>
       </tr>
       <% end %>
