--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -35,12 +35,14 @@
       <a href="/feedbacks" class="btn btn-primary">
         Back
       </a>
-      <a href="/feedbacks/<%= @feedback.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_feedback/<%= @feedback.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
+      <% if current_user == @feedback.sender_user %>
+        <a href="/feedbacks/<%= @feedback.id %>/edit" class="btn btn-warning">
+          Edit
+        </a>
+        <a href="/delete_feedback/<%= @feedback.id %>" class="btn btn-danger" rel="nofollow">
+          Delete
+        </a>
+      <% end %>
     </div>
   </div>
 </div>
