--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -51,6 +51,38 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_staffing" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for project_id -->
+      <div class="form-group">
+        <label for="project_id" class="control-label">
+          Project
+        </label>
+
+        <%= select_tag(:project_id, options_from_collection_for_select(Project.all, :id, :name), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for user_id -->
+      <div class="form-group">
+        <label for="user_id" class="control-label">
+          User
+        </label>
+
+        <%= select_tag(:user_id, options_from_collection_for_select(User.all, :id, :name), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for role_id -->
+      <input type="hidden" name="role_id" value="<%= @role.id %>">
+
+      <button class="btn btn-block btn-success">
+        Create Staffing
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
@@ -82,6 +114,47 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_subdimension" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for dimension_id -->
+      <div class="form-group">
+        <label for="dimension_id" class="control-label">
+          Dimension
+        </label>
+
+        <%= select_tag(:dimension_id, options_from_collection_for_select(Dimension.all, :id, :name), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for role_id -->
+      <input type="hidden" name="role_id" value="<%= @role.id %>">
+
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for expectation -->
+      <div class="form-group">
+        <label for="expectation" class="control-label">
+          Expectation
+        </label>
+
+        <input type="text" id="expectation" name="expectation" placeholder="Expectation" class="form-control" value="">
+      </div>
+
+      <button class="btn btn-block btn-success">
+        Create Subdimension
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
