Display associated collections on show pages

--- a/app/views/subdimensions/show.html.erb
+++ b/app/views/subdimensions/show.html.erb
@@ -32,3 +32,34 @@
     </div>
   </div>
 </div>
+
+<!-- A Subdimension has many feedbacks -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Feedbacks
+      </li>
+
+      <% @subdimension.feedbacks.each do |feedback| %>
+        <li class="list-group-item">
+          <a href="/feedbacks/<%= feedback.id %>">
+            <%= feedback.staffing_id %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/feedbacks/<%= feedback.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/feedbacks/<%= feedback.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_feedback/<%= feedback.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
