--- a/app/views/dimensions/show.html.erb
+++ b/app/views/dimensions/show.html.erb
@@ -23,3 +23,34 @@
     </div>
   </div>
 </div>
+
+<!-- A Dimension has many subdimensions -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Subdimensions
+      </li>
+
+      <% @dimension.subdimensions.each do |subdimension| %>
+        <li class="list-group-item">
+          <a href="/subdimensions/<%= subdimension.id %>">
+            <%= subdimension.name %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/subdimensions/<%= subdimension.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/subdimensions/<%= subdimension.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_subdimension/<%= subdimension.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
