--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -23,3 +23,127 @@
     </div>
   </div>
 </div>
+
+<!-- A Role has many staffings -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Staffings
+      </li>
+
+      <% @role.staffings.each do |staffing| %>
+        <li class="list-group-item">
+          <a href="/staffings/<%= staffing.id %>">
+            <%= staffing.created_at %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/staffings/<%= staffing.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/staffings/<%= staffing.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_staffing/<%= staffing.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<!-- A Role has many subdimensions -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Subdimensions
+      </li>
+
+      <% @role.subdimensions.each do |subdimension| %>
+        <li class="list-group-item">
+          <a href="/subdimensions/<%= subdimension.id %>">
+            <%= subdimension.name %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/subdimensions/<%= subdimension.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/subdimensions/<%= subdimension.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_subdimension/<%= subdimension.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<!-- A Role has many users -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Users
+      </li>
+
+      <% @role.users.each do |user| %>
+        <li class="list-group-item">
+          <a href="/users/<%= user.id %>">
+            <%= user.name %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/users/<%= user.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/users/<%= user.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_user/<%= user.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<!-- A Role has many projects -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Projects
+      </li>
+
+      <% @role.projects.each do |project| %>
+        <li class="list-group-item">
+          <a href="/projects/<%= project.id %>">
+            <%= project.name %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/projects/<%= project.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/projects/<%= project.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_project/<%= project.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
