--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -28,13 +28,7 @@
       </div>
 
       <!-- Label and input for sender_user_id -->
-      <div class="form-group">
-        <label for="sender_user_id" class="control-label">
-          Sender user
-        </label>
-
-        <%= select_tag(:sender_user_id, options_from_collection_for_select(User.all, :id, :name, @feedback.sender_user_id), :class => "form-control") %>
-      </div>
+      <input type="hidden" name="sender_user_id" value="<%= current_user.id %>">
 
       <!-- Label and input for receiver_user_id -->
       <div class="form-group">
