--- a/app/views/subdimensions/index.html.erb
+++ b/app/views/subdimensions/index.html.erb
@@ -18,8 +18,20 @@
 
       <% @subdimensions.each do |subdimension| %>
       <tr>
-        <td><%= subdimension.dimension.name %></td>
-        <td><%= subdimension.role.name %></td>
+        <td>
+          <% if subdimension.dimension.present? %>
+            <a href="/dimensions/<%= subdimension.dimension.id %>">
+              <%= subdimension.dimension.name %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <% if subdimension.role.present? %>
+            <a href="/roles/<%= subdimension.role.id %>">
+              <%= subdimension.role.name %>
+            </a>
+          <% end %>
+        </td>
         <td><%= subdimension.name %></td>
         <td><%= subdimension.expectation %></td>
         <td>
